<resources>
    <string name="app_name">SMS Banking</string>
    <string name="acasa">Acasa</string>
    <string name="banca">Banca</string>
    <string name="profil">Profil</string>
    <string name="contacte">Contacte</string>
    <string name="credite">Credite</string>
    <string name="mesaje">Mesaje</string>
    <string name="rapoarte">Rapoarte</string>

    <string name="nume">Nume</string>
    <string name="prenume">Prenume</string>
    <string name="telefon">Telefon</string>
    <string name="suma_cont">Suma cont</string>
    <string name="detalii_client">Detalii client</string>
    <string name="data_nasterii_dd_mm_yyyy">Data nasterii dd/mm/yyyy</string>
    <string name="adauga_contact">Adauga contact</string>
    <string name="adauga_credit">Adauga credit</string>
    <string name="denumire_credit">Denumire credit</string>
    <string name="suma_imprumutata">Suma imprumutata</string>
    <string name="dobanda">Dobanda</string>
    <string name="durata_ani">Durata ani</string>
    <string name="credit">Adauga credit</string>
    <string name="adauga">Adauga</string>
    <string name="dialog">dialog</string>
    <string name="invalid_denumire_credit_error">Completati denumire credit</string>
    <string name="invalid_suma_field_error">Completati campul suma</string>
    <string name="invalid_dobanda_error">Completati dobanda</string>
    <string name="invalid_durata_error">Completati durata creditului</string>
    <string name="invalid_nume_error">Completati numele</string>
    <string name="invalid_prenume_error">Completati prenumele</string>
    <string name="invalid_telefon_error">Completati telefon</string>
    <string name="invalid_data_error">Completati data nasterii conform formatului</string>
    <string name="gen_feminin">F</string>
    <string name="gen_masculin">M</string>
    <string name="invalid_gen_error">Selectati genul</string>
    <string name="invalid_suma_cont_error">Completati suma cont</string>
    <string name="no_content">-</string>
    <string name="editeaza">Editeaza</string>
    <string name="sterge_contact">Sterge contact</string>
    <string name="sterge">Sterge</string>
    <string name="trimite_mesaj">Trimite mesaj</string>
    <string name="mesaje_anterioare">Mesaje anterioare</string>
    <string name="salveaza">Salveaza</string>
    <string name="renunta">Renunta</string>
    <string name="click_and_edit">Editare</string>
    <string name="contact_edit">Editare contact</string>
    <string name="edit_credit">Editeaza credit</string>
    <string name="bankActivity_bank_adress">Adresa banca</string>
    <string name="lv_bank_dafault">-</string>
    <string name="bank_comision">Comision</string>
    <string name="denumire_banca">Denumire banca</string>
    <string name="edit_commission">Editeaza comision</string>
    <string name="invalid_commission_error">Completati comisionul</string>
    <string name="dialog_edit_commission">Modificare comision</string>
    <string name="log_in">Conecteaza-te</string>
    <string name="register">Inregistreaza-te</string>
    <string name="parola">Parola</string>
    <string name="email">Email</string>
    <string name="log_out">Delogheaza-te</string>
    <string name="update_profile">Editare profil</string>
    <string name="long_click_end_delete">Apasa lung ca sa stergi</string>
    <string name="mesaj_aniversar">Mesaj aniversar</string>
    <string name="update_suma_cont">Editare suma cont</string>
    <string name="update_dobanda">Editare dobanda</string>
    <string name="terminare_credit">Terminare credit</string>

    <string name="mesajLMA">Draga %1$s, in aceasta zi speciala echipa noastra iti ureaza La multi ani!</string>
    <string name="mesajUpdateSumaCont">Draga %1$s, te anuntam ca ti s-a modificat suma contului. Acum detii %2$6.2f lei.</string>
    <string name="mesajUpdateDobanda">Draga %1$s, dobanda la creditul tau %2$s s-a modificat la %3$6.2f procente.</string>
    <string name="mesajTerminareCredit">Draga %1$s, creditul tau %2$s in valoare de %3$6.2f lei a fost achitat. </string>
    <string name="mesajInserareCreditNou">Draga %1$s, creditul tau %2$s in valoare de %3$6.2f lei a fost inregistrat. </string>
    <string name="mesajUpdateComision">Draga %1$s, comisionul la banca %2$s este in prezent %3$6.2f procente</string>

    <string name="toastTrimitereSMS">SMS trimis contactului %1$s</string>
    <string name="numeUser">%1$s %2$s</string>
    <string name="numeUserCareATrimisMesajul">Trimis de: %1$s</string>

    <string name="credit_needitat_error">Nu ati editat dobanda creditului</string>
    <string name="credit_nesters_error">Nu ati sters niciun credit</string>
    <string name="suma_cont_needitata_error">Nu ati editat suma cont</string>
    <string name="separator_de_mesaje">\@</string>
    <string name="mesajele_trimise_de_tine">Mesajele trimise de tine</string>
    <string name="tab_title_sarbatoriti">Sarbatoriti</string>
    <string name="tab_title_indatorati">Indatorati</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clientii_care_au_credite_de_peste_6000_lei">Clientii care au credite de peste 6000 lei</string>
    <string name="long_click_and_delete">Apasa lung ca sa stergi</string>
    <string name="click_and_see_more">Apasa aici ca sa vezi mai mult</string>
    <string name="long_click">Apasa lung</string>
    <string name="click">Apasa</string>
    <string name="nume_contact_ultimul_mesaj">%1$s %2$s</string>
    <string name="forgot_password">Mi-am uitat parola</string>
    <string name="reset_password">Resetare parola</string>
    <string name="email_err">Completati cu un email valid</string>
    <string name="inform_email_has_been_sent">Mailul de resetare a parolei v-a fost trimis.</string>
    <string name="mesaj_welcome">Bine ati venit!</string>
    <string name="msj_error">Ups... Se pare ca este o problema...</string>
    <string name="err_name">Completati numele</string>
    <string name="err_prenume">Completati prenumele</string>
    <string name="err_telefon">Completati numarul de telefon</string>
    <string name="err_email">Completati cu un email valid</string>
    <string name="err_parola">Parola trebuie sa contina cel putin 8 caractere</string>
    <string name="auth_failed">Nu v-ati putut autentifica.</string>
    <string name="sarbatoriti">Sarbatoriti</string>
    <string name="indatorati">Indatorati</string>
    <string name="label_peste_6000">Peste 6000</string>
    <string name="label_sub">Sub 3000</string>
    <string name="label_between">Intre 3000 si 6000</string>
    <string name="title_pie">Distributia creditelor</string>
    <string name="radar_chart_title">Diagrama radar pentru suma conturilor sarbatoritilor</string>
    <string name="mesajele_trimise">Mesajele trimise</string>
    <string name="no_user">-</string>
    <string name="data">Data</string>
    <string name="trimis">Trimis</string>
    <string name="invalid_birthdate_error">Nu este ziua contactului</string>
    <string name="tine_ma_minte">Tine-ma minte!</string>
    <string name="faild_send_message">Failed to send message</string>
    <string name="informare_trimitere_mesaje">Toti sarbatoritii au primit mesaj</string>
    <string name="intrebare">Cui vrei sa i trimiti?</string>
    <string name="trimis_cu_succes">Message is sent</string>
    <string name="failed_to_send">Failed to send message</string>
    <string name="inregistrare_credit_nou">Inregistrare credit</string>
    <string name="neinserare_credit">Nu ati inserat credit</string>
    <string name="message_update">Toate contactele au primit mesaj de update comision</string>
    <string name="cauta">Cauta o banca</string>
    <string name="comision_nemodificat">Nu ati updatat niciun comision</string>
    <string name="err_comision">Eroare comision: comisionul trebuie sa fie intre 0 si 1.</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyARbZ0J_XJ0VMSBwLQDWgcPM5pvMppHzbQ</string>

</resources>