<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background">


    <EditText
        android:id="@+id/et_nume"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/nume"
        android:padding="12dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/round_border"
        android:backgroundTint="@color/startColor"
        android:drawableStart="@drawable/ic_baseline_format_align_justify_24"
        android:drawableLeft="@drawable/ic_baseline_format_align_justify_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_prenume"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/prenume"
        android:background="@drawable/round_border"
        android:backgroundTint="@color/startColor"
        android:drawableStart="@drawable/ic_baseline_format_align_justify_24"
        android:drawableLeft="@drawable/ic_baseline_format_align_justify_24"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_nume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_telefon"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/telefon"
        android:background="@drawable/round_border"
        android:backgroundTint="@color/startColor"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/et_prenume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/round_border"
        android:backgroundTint="@color/startColor"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/et_telefon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_parola"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/parola"
        android:background="@drawable/round_border"
        android:backgroundTint="@color/startColor"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_parola"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/register"
        android:textSize="28dp"
        android:textColor="@color/startColor"
        android:background="@color/turqoise"
        />


</androidx.constraintlayout.widget.ConstraintLayout>