<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_atavar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:id="@+id/lv_contact_nume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nume"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="20sp"
             />
           <TextView
               android:id="@+id/lv_contact_prenume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prenume"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="20sp"
            />
            <TextView
             android:id="@+id/lv_contact_telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefon"
            android:textColor="#a9a9a9"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="15sp"
            />
    </LinearLayout>
</LinearLayout>