<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
            <EditText
                android:id="@+id/input_denumire_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_baseline_format_align_justify_24"
                android:drawableLeft="@drawable/ic_baseline_format_align_justify_24"
                android:hint="@string/denumire_credit"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_suma_imprumutata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:drawableLeft="@drawable/ic_baseline_attach_money_24"
                android:hint="@string/suma_imprumutata"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/input_dobanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_baseline_monetization_on_24"
                android:drawableLeft="@drawable/ic_baseline_monetization_on_24"
                android:hint="@string/dobanda"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/input_durata_ani"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_baseline_access_time_24"
                android:drawableLeft="@drawable/ic_baseline_access_time_24"
                android:hint="@string/durata_ani"
                android:inputType="number" />
    </LinearLayout>
</ScrollView>