<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@color/startColor"
        android:padding="12dp"
        android:layout_marginTop="120dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_parola"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:hint="@string/parola"
        android:background="@color/startColor"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/log_in"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/turqoise"
        android:text="@string/log_in"
        android:textColor="@color/startColor"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_parola" />


</androidx.constraintlayout.widget.ConstraintLayout>