<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

   <Button
       android:id="@+id/log_out"
       android:layout_width="120dp"
       android:layout_height="wrap_content"
       android:background="@color/startColor2"
       android:textColor="@color/startColor"
       android:text="@string/log_out"
       android:textSize="14dp"
       android:layout_marginTop="15dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       />

    <Button
        android:id="@+id/update_profile"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/startColor2"
        android:textColor="@color/startColor"
        android:text="@string/update_profile"
        android:textSize="14dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/imageView_avatar"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginLeft="0dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/startColor2" />

    <TextView
        android:id="@+id/nume"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/nume"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_avatar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/display_nume"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/nume"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/prenume"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/prenume"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/display_nume"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/display_prenume"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/prenume"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/telefon"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/telefon"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/display_prenume"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/display_telefon"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/telefon"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/email"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/display_telefon"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/display_email"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"/>


 <com.google.android.material.bottomnavigation.BottomNavigationView
     android:id="@+id/bottom_nav_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:menu="@menu/menu_bottom_nav_view" />

</androidx.constraintlayout.widget.ConstraintLayout>