<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <Button
        android:id="@+id/btn_contacte"
        android:layout_width="140dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toStartOf="@id/btn_adauga_contact"
        android:text="@string/contacte"
        android:background="@color/startColor"
        android:textColor="@color/startColor3"
        android:textSize="20dp"
        />

    <Button
        android:id="@+id/btn_adauga_contact"
        android:layout_width="140dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toEndOf="@id/btn_contacte"
        android:text="@string/adauga_contact"
        android:background="@color/startColor"
        android:textColor="@color/startColor3"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/btn_mesaje"
        android:layout_width="140dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_contacte"
        app:layout_constraintEnd_toStartOf="@id/btn_rapoarte"
        android:text="@string/mesaje"
        android:background="@color/startColor"
        android:textColor="@color/startColor3"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/btn_rapoarte"
        android:layout_width="140dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_contacte"
        app:layout_constraintStart_toEndOf="@id/btn_mesaje"
        android:text="@string/rapoarte"
        android:background="@color/startColor"
        android:textColor="@color/startColor3"
        android:textSize="20dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/startColor2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_nav_view" />

</androidx.constraintlayout.widget.ConstraintLayout>